--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -b && node dist/index.js"
+    "build": "tsc",
+    "dev": "tsc -b && node dist/index.js",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
